# dpdk_dc_sand

./: .flake8  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
bdd_experiment/: .gitignore  README.md
beamformer/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cfunc_example/: .gitignore  README.md  example.py  pyproject.toml  setup.cfg  setup.py
delay_tracking/: README.md  delay_tracking_requirements_calculator.py
dpdk_send_recv/: .gitignore  Makefile  README.md  TODO  dpdk_common.cpp  dpdk_common.h  dpdk_recv.cpp  dpdk_send.cpp  dpdk_send_demo.c  verify.py
dsim/: README.md  requirements.txt  setup.py
dsim_analysis/: allan_var.py  clamp.py  config.py  cw.py  main.py  report_results.py  wgn.py
fft_analysis/: analyse_data.py  config.py  cw_generator.py  fft_compute.py  fft_cpu.py  fft_fpga.py  fft_gpu.py  fft_standalone.py  fft_standalone_fp16.py  fft_standalone_fp16_fp32.py  fft_standalone_speedtest.py  main.py  vkfft_demo.py  vkfft_fp16.py
fgpu_send_prototype/: fgpu_send_prototype.py
merge_gpu_repositories/: cleanup.sh  do_merge.sh
packet_latency/: README.md  extract_timestamps.py  plot_latency.py
pdf_logger/: .gitignore  README.md  requirements.txt  setup.cfg
pdf_logger/report/: report.json  report.tex
pdf_logger/src/pdf_logger/: convenience.py  json_handler.py  katdoc.sty  latex_dump.py  latex_handler.py  preamble.tex  preamble_template.mako
pdf_logger/src/test_report/: latex_dump.py  preamble.tex
pdf_logger/test/: conftest.py  test_hypothetical_correlator.py  test_json_handler.py  test_latex_handler.py
sphinx_design_doc_mockup/: README.md  applicable_docs.bib  conf.py  frontmatter.rst  (+7 more)
test_report/: README.md  setup.cfg
test_report/sample/: my_report.json
test_report/src/test_report/: latex_dump.py
test_report/test/: conftest.py  test_hypothetical_correlator.py
(+62 files in other folders)
