[metadata]
name = pdf_logger
description = Scratching around with logging to pdf
author = James Smith
author_email = jsmith@sarao.ac.za
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
install_requires =
    matplotlib
    numpy
    pylatex
    pytest
    pytest-reportlog
    python-dotenv
    tikzplotlib
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pdf_logger_report = pdf_logger.latex_dump:main

[options.package_data]
* = *.sty, *.tex, *.png
