[metadata]
name = test_report
description = More detailed JSON output from pytest, and PDF generation from these.
author = James Smith
author_email = jsmith@sarao.ac.za
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    docutils
    numpy
    pylatex
    pytest
    pytest-reportlog
    python-dotenv
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    generate_pdf_test_report = test_report.latex_dump:main

[options.package_data]
* = *.sty, *.tex, *.png
